# src/main/java/com/parqueadero/dto/TarifaDTO.java
@@ -8,6 +8,7 @@ import java.math.BigDecimal;
 @Data
 @Builder
 public class TarifaDTO {
+    private String tipoVehiculo;
     private String tipoTarifa;
     private BigDecimal valor;
 }
